--- a/mobile.css
+++ b/mobile.css
@@ -5,6 +5,8 @@
 
 body {
     margin: 0;
+    font-family: "Roboto Mono", monospace;
+    font-weight: 300;
 }
 
 /* Object */
@@ -18,6 +20,14 @@ header {
     box-shadow: rgba(0, 0, 0, 0.256) 0px 2px 15px;/
 }
 
+.main {
+    padding: 0 2.2rem;
+}
+
+.main-icons {
+    font-size: 4rem;
+}
+
 .navbar-mobile {
     justify-content: space-between;
     align-items: center;
@@ -25,6 +35,10 @@ header {
 }
 
 .header-desktop {
+    display: none;
+}
+
+.banner-desktop {
     display: none;
 }
 
@@ -49,25 +63,121 @@ header {
     display: none;
 }
 
+.box-container {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+}
+
+.earth {
+    background-image: url("./assets/Earth_Day_PNG.png");
+    background-size: cover;
+    min-height: 7rem;
+    border-radius: 5px;
+    flex: 1;
+}
+
+.ramadan {
+    background-image: url("./assets/Ramadan_PNG.png");
+    background-size: cover;
+    min-height: 7rem;
+    border-radius: 5px;
+    flex: 1;
+}
+
+.cincodemayo {
+    background-image: url("./assets/Cinco_de_Mayo_PNG.png");
+    background-size: cover;
+    min-height: 7rem;
+    border-radius: 5px;
+    flex: 1;
+}
+
+.ramadan {
+    background-image: url("./assets/Ramadan_PNG.png");
+    background-size: cover;
+    min-height: 5rem;
+    border-radius: 5px;
+    flex: 1;
+}
+
+
+
 /* Utility */
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 1rem;
 }
 
 .flex {
     display: flex;
 }
 
+.column {
+    flex-direction: column;
+}
+
 .justify-center {
     justify-content: center;
+}
+
+.justify-between {
+    justify-content: space-between;
 }
 
 .bg-white {
     background-color: #fff;
 }
 
-.bg-black {
-    background-color: #000;
+.bg-purple {
+    background-color: #a253a2;
+}
+
+.wrap {
+    flex-wrap: wrap;
+
+}
+
+.grow-1 {
+    flex: 1;
+}
+
+.weight-200 {
+    font-weight: 200;
+}
+
+.gap-1 {
+    gap: 1rem;
+}
+
+.position-relative {
+    position: relative;
+}
+
+.position-absolute {
+    position: absolute;
+}
+
+.p-05 {
+    padding: 0.5rem;
+}
+
+.ml-1 {
+    margin-left: 1rem;
+}
+
+.mb-2 {
+    margin-bottom: 2rem;
+}
+
+.border-radius-5 {
+    border-radius: 5px;
+}
+
+.size-08 {
+    font-size: 0.8rem;
+}
+
+.w-fit {
+    width: fit-content;
 }
