--- a/desktop.css
+++ b/desktop.css
@@ -7,7 +7,14 @@
 
     .main {
         margin-left: 4.2rem;
-        max-width: 1380px;
+        max-width: 1350px;
+    }
+
+    @media (min-width: 1500px) {
+        .main {
+            margin: 0 auto;
+            padding-left: 4.2rem;
+        }
     }
 
     .footer {
@@ -92,11 +99,6 @@
 
     .emojipedia-container {
         margin: 2rem 0;
-    }
-
-    .container {
-        padding: 0 1rem;
-        /* sökfältet går annars kant i kant. Kanske finns annan lösning. */
     }
 
     .banner-desktop {
