--- a/desktop.css
+++ b/desktop.css
@@ -31,6 +31,12 @@
         }
     }
 
+    .search-container {
+        position: sticky;
+        top: 0;
+        background-color: white;
+    }
+
     footer nav {
         flex: 1;
     }
@@ -129,7 +135,7 @@
     }
 
     .emojipedia-container {
-        margin: 2rem 0;
+        margin: 5rem 0 1rem 0;
     }
 
     .banner-desktop {
