--- a/desktop.css
+++ b/desktop.css
@@ -6,13 +6,13 @@
     }
 
     .main {
-        margin-left: 4.2rem;
+        margin-left: 3rem;
         max-width: 1350px;
     }
 
 
     .footer {
-        margin-left: 4.2rem;
+        margin-left: 3rem;
         max-width: 1350px;
         flex-direction: row;
         gap: 1rem;
@@ -55,7 +55,10 @@
     }
 
     .lang-opt {
-        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        font-size: 14px;
+        font-weight: 800;
     }
 
     /* Object */
@@ -150,13 +153,18 @@
         flex-direction: row;
     }
 
-    .navbar-desktop>p {
+    .navbar-desktop {
+        height: 60%;
+    }
+
+    .navbar-icon>p {
         margin: 5px 0;
         font-size: 24px;
     }
 
     .nav-desktop-container {
         display: flex;
+        max-width: 3rem;
         position: fixed;
         top: 0;
         bottom: 0;
