--- a/mobile.css
+++ b/mobile.css
@@ -5,13 +5,22 @@
 
 body {
     margin: 0;
-    font-family: "Roboto Mono", monospace;
+    font-family: "Roboto", sans-serif;
     font-weight: 300;
 }
 
 h2,
 h3 {
-    margin: 0 0 1rem 0;
+    margin: 0;
+    font-weight: 300;
+}
+
+h2 {
+    font-size: 1.2rem;
+}
+
+h3 {
+    font-size: 1rem;
 }
 
 ul {
@@ -148,6 +157,10 @@ footer section {
     border-radius: 5px;
 }
 
+.empty-div {
+    height: 20rem;
+}
+
 section p {
     margin: 0 0 0.5rem 0;
     font-size: 12px;
@@ -169,6 +182,10 @@ section p {
 
 .justify-between {
     justify-content: space-between;
+}
+
+.items-center {
+    align-items: center;
 }
 
 .wrap {
@@ -194,10 +211,6 @@ section p {
 
 .bg-purple {
     background-color: #a253a2;
-}
-
-.weight-200 {
-    font-weight: 200;
 }
 
 .position-relative {
